# fastapi_class_app

./: .dockerignore  .gitignore  Dockerfile  aerich.ini  async_intro.py  docker-compose.yaml  initialize.sh
app/: __init__.py  main.py
app/models/: orm_models.py  schemas.py  schemas_utils.py
app/templates/: 404.html  index.html
app/views/: crud.py  views.py
migrations/models/: 0_20210610203033_init.sql
poetry-env/: pyproject.toml
